[package]
name = "nbx-grpc-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
nbx-nockchain-types = { path = "../nbx-nockchain-types" }
nbx-ztd = { workspace = true }
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["codegen", "prost", "transport"] }
thiserror = "2.0"

[build-dependencies]
glob = "0.3"
prost-build = "0.13"
tonic-build = "0.12"
